--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "react版本的小程序",
   "main": "index.js",
   "scripts": {
+    "precommit": "lint-staged",
     "build:weapp": "taro build --type weapp",
     "build:h5": "taro build --type h5",
     "build:rn": "taro build --type rn",
@@ -12,6 +13,16 @@
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "tslint --fix ",
+      "git add"
+    ],
+    "src/**/*.{scss}": [
+      "stylelint --fix",
+      "git add"
+    ]
   },
   "author": "",
   "license": "MIT",
@@ -30,25 +41,29 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.8",
-    "@types/webpack-env": "^1.13.6",
     "@tarojs/plugin-babel": "^1.0.0-beta.26",
     "@tarojs/plugin-csso": "^1.0.0-beta.26",
     "@tarojs/plugin-sass": "^1.0.0-beta.26",
     "@tarojs/plugin-typescript": "^1.0.0-beta.26",
     "@tarojs/plugin-uglifyjs": "^1.0.0-beta.26",
     "@tarojs/webpack-runner": "^1.0.0-beta.26",
+    "@types/react": "^16.4.8",
+    "@types/webpack-env": "^1.13.6",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-taro": "^1.0.0-beta.26",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-taro": "^1.0.0-beta.26",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2",
+    "stylelint": "^9.5.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   }
 }
