--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tarojs/plugin-typescript": "^1.0.0-beta.26",
     "@tarojs/plugin-uglifyjs": "^1.0.0-beta.26",
     "@tarojs/webpack-runner": "^1.0.0-beta.26",
+    "@types/blueimp-md5": "^2.7.0",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "babel-eslint": "^8.2.3",
@@ -55,6 +56,7 @@
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "blueimp-md5": "^2.10.0",
     "eslint": "^4.19.1",
     "eslint-config-taro": "^1.0.0-beta.26",
     "eslint-plugin-import": "^2.12.0",
@@ -64,6 +66,7 @@
     "lint-staged": "^7.2.2",
     "stylelint": "^9.5.0",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.0.1"
   }
 }
