--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
-  "author": "",
+  "author": "yidong",
   "license": "MIT",
   "dependencies": {
     "@tarojs/async-await": "^1.0.0-beta.26",
@@ -50,8 +50,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "blueimp-md5": "^2.10.0",
+    "conventional-changelog-cli": "^2.0.11",
     "husky": "^1.1.3",
     "lint-staged": "^7.2.2",
+    "redux": "^4.0.1",
     "stylelint": "^9.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
