--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^1.1.3",
     "lint-staged": "^7.2.2",
     "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
     "stylelint": "^9.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
