--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "babel-preset-env": "^1.6.1",
     "blueimp-md5": "^2.10.0",
     "conventional-changelog-cli": "^2.0.11",
+    "dva-core": "^1.4.0",
+    "dva-loading": "^2.0.6",
     "husky": "^1.1.3",
     "lint-staged": "^7.2.2",
     "redux": "^4.0.1",
