--- a/package.json
+++ b/package.json
@@ -1,80 +1,80 @@
 {
-  "name": "taro-react-mini-program",
-  "version": "1.0.0",
-  "private": true,
-  "description": "react版本的小程序",
-  "main": "index.js",
-  "scripts": {
-    "precommit": "lint-staged",
-    "build:weapp": "taro build --type weapp",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
-  },
-  "author": "yidong",
-  "license": "MIT",
-  "dependencies": {
-    "@tarojs/async-await": "^1.0.0-beta.26",
-    "@tarojs/components": "^1.0.0-beta.26",
-    "@tarojs/redux": "^1.0.0-beta.26",
-    "@tarojs/redux-h5": "^1.0.0-beta.26",
-    "@tarojs/router": "^1.0.0-beta.26",
-    "@tarojs/taro": "^1.0.0-beta.26",
-    "@tarojs/taro-h5": "^1.0.0-beta.26",
-    "@tarojs/taro-weapp": "^1.0.0-beta.26",
-    "nervjs": "^1.3.0",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "qs": "^6.5.2"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@tarojs/plugin-babel": "^1.0.0-beta.26",
-    "@tarojs/plugin-csso": "^1.0.0-beta.26",
-    "@tarojs/plugin-sass": "^1.0.0-beta.26",
-    "@tarojs/plugin-typescript": "^1.0.0-beta.26",
-    "@tarojs/plugin-uglifyjs": "^1.0.0-beta.26",
-    "@tarojs/webpack-runner": "^1.0.0-beta.26",
-    "@types/blueimp-md5": "^2.7.0",
-    "@types/react": "^16.4.8",
-    "@types/webpack-env": "^1.13.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "blueimp-md5": "^2.10.0",
-    "conventional-changelog-cli": "^2.0.11",
-    "dva-core": "^1.4.0",
-    "dva-loading": "^2.0.6",
-    "husky": "^1.1.3",
-    "lint-staged": "^7.2.2",
-    "redux": "^4.0.1",
-    "stylelint": "^9.5.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.1"
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "tslint --fix ",
-      "git add"
-    ],
-    "src/**/*.{scss}": [
-      "stylelint --fix",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  }
+	"name": "taro-react-mini-program",
+	"version": "1.0.0",
+	"private": true,
+	"description": "react版本的小程序",
+	"main": "index.js",
+	"scripts": {
+		"precommit": "lint-staged",
+		"build:weapp": "taro build --type weapp",
+		"build:h5": "taro build --type h5",
+		"build:rn": "taro build --type rn",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+	},
+	"author": "yidong",
+	"license": "MIT",
+	"dependencies": {
+		"@tarojs/async-await": "1.1.8",
+		"@tarojs/components": "1.1.8",
+		"@tarojs/redux": "1.1.8",
+		"@tarojs/redux-h5": "1.1.8",
+		"@tarojs/router": "1.1.8",
+		"@tarojs/taro": "1.1.8",
+		"@tarojs/taro-h5": "1.1.8",
+		"@tarojs/taro-weapp": "1.1.8",
+		"nervjs": "^1.3.0",
+		"redux": "^4.0.0",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
+		"qs": "^6.5.2"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^7.2.1",
+		"@commitlint/config-conventional": "^7.1.2",
+		"@tarojs/plugin-babel": "1.1.8",
+		"@tarojs/plugin-csso": "1.1.8",
+		"@tarojs/plugin-sass": "1.1.8",
+		"@tarojs/plugin-typescript": "^1.0.0-beta.26",
+		"@tarojs/plugin-uglifyjs": "1.1.8",
+		"@tarojs/webpack-runner": "1.1.8",
+		"@types/blueimp-md5": "^2.7.0",
+		"@types/react": "^16.4.8",
+		"@types/webpack-env": "^1.13.6",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-jsx-stylesheet": "^0.6.5",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"blueimp-md5": "^2.10.0",
+		"conventional-changelog-cli": "^2.0.11",
+		"dva-core": "^1.4.0",
+		"dva-loading": "^2.0.6",
+		"husky": "^1.1.3",
+		"lint-staged": "^7.2.2",
+		"redux": "^4.0.1",
+		"stylelint": "^9.5.0",
+		"tslint": "^5.11.0",
+		"tslint-config-prettier": "^1.15.0",
+		"typescript": "^3.0.1"
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx}": [
+			"tslint --fix ",
+			"git add"
+		],
+		"src/**/*.{scss}": [
+			"stylelint --fix",
+			"git add"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	}
 }
